--- a/public/stylesheets/main_style.css
+++ b/public/stylesheets/main_style.css
@@ -6,7 +6,7 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
-    -web-text-size-adjust: none;
+    -web-text-size-adjust: 100%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -18,6 +18,11 @@ body {
     width: auto;
     display: flex;
     flex-direction: column;
+}
+
+nav {
+    display: block;
+    margin-top: 80px;
 }
 
 aside ul {
@@ -52,22 +57,22 @@ header {
     transition: top 0.2s;
 }
 
-.nav-up {
-    top: -80px;
-}
-
-.nav-up2 {
-    margin-top: 0px;
-}
-
 footer {
-    width: auto;
-    position: relative;
+    width: 100%;
+    position: relative; /*fixed*/
     height: 48px;
     text-align: center;
     background-color: #cccccc;
     color: black;
     line-height: 1.5em;
+}
+
+.header-up {
+    top: -80px;
+}
+
+.section-ids-up {
+    margin-top: 0px;
 }
 
 article,
@@ -87,12 +92,13 @@ aside {
 
 #flex-aside-one {
     height: 100%;
-    flex: 0 0 320px;
-    max-width: 250px;   /* ensures that box does not RESIZE **/
+    flex: 0 0 640px;
+    max-width: 320px;   /* ensures that box does not RESIZE **/
     box-orient: vertical;
     box-ordinal-group: 1;
     background-color: white;
     transition: max-width 1s;
+    -webkit-transition: max-width 1s ease;
 }
 
 #flex-aside-one:hover {
@@ -108,7 +114,7 @@ aside {
     border-left: 16px solid #eeeeee;
     border-right: 16px solid #eeeeee;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 18px;
+    font-size: 1.2em;
     line-height: 1.2em;
     background-color: white;
     overflow: hidden;
@@ -141,6 +147,13 @@ aside {
     font-weight: bold;
 }
 
+#search-field {
+    width: 100%;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
 #search-field:hover {
     color:#555555;
     cursor: pointer;
@@ -157,31 +170,31 @@ aside {
 }
 
 #num-results {
-    font-size: 10px;
     float: right;
 }
 
 #input-form{
+    width: 100%;
     display: block;
     position: relative;
 }
 
-#input-form label {
+#input-form div {
+    z-index: 1;
     position: absolute;
-    margin-top: 6px;
+    bottom: 6px;
+    top: 6px;
     right: 8px;
     padding-left: 4px;
     color: #aaaaaa;
-    z-index: 1;
     cursor: text;
     pointer-events: none;
     line-height: 24px;
+    font-size: 10px;
 }
 
 #input-form input, #input-form textarea, #input-form select {
     z-index: 0;
-    margin: 0;
-    vertical-align: middle;
     font: inherit;
     line-height: 24px;
 }
@@ -269,6 +282,14 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
+
+@media only screen and (max-width: 640px) {
+
+    #flex-main-content {
+        font-size: 1.0em;
+    }
+}
+
 
 /*
 @media screen and (max-device-width: 1024px) {
